# genki-signals

./: .flake8  .gitignore  README.md  app.py  nbstripout.py  package-lock.json  package.json  push_server.py  pyproject.toml  request_server.py  setup.py  socket_server.py
dashboard/: package-lock.json  package.json  svelte.config.js
examples/: 01_Introduction.ipynb  02_AsyncrhonousSamplers.ipynb  02_Sources_and_samplers.ipynb  03_CustomSignalSources.ipynb  03_Signal_functions_in_depth.ipynb  04_CustomSignalFunctions.ipynb  04_SignalSystem_and_Sessions.ipynb  05_Arduino.ipynb  05_Frontend.ipynb  06_FullPipelineExample.ipynb  Frontend demo.ipynb  Genki Signals demo.ipynb  Genki Widgets.ipynb  Is touching demo.ipynb  Swipe demo.ipynb  Untitled.ipynb  Video demo.ipynb  demo_09_03.ipynb  demo_10_03.ipynb  is_touching.ipynb  mockup.ipynb  schemdraw testing.ipynb
genki-signals/: package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
genki_signals/: __init__.py  _version.py  array_frame.py  buffers.py  data_generators.py  data_sources.py  dead_reckoning.py  fft_ops.py  filters.py  fusion.py  is_touching_models.py  post_processing.py  profile_signal_system.py  quantization.py  recorders.py  sampler.py  session.py  signal_system.py  system.py
genki_signals/data_sources/: arduino.py  (+7 more)
signal_processing/: buffers.py  data_sources.py  dead_reckoning.py  is_touching_models.py  quantization.py  signals.py  system.py
static/: line_chart.js
templates/: d3_dashboard.html  hist.html  index.html  line_chart.html  plot.html  spectro.html
test/: profiler.py
(+150 files in other folders)
