[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genki-signals"
version = "0.1.0"
description = "Realtime signal processing"
readme = "README.md"
authors = [
    { name = "Bjarni Haukur Bjarnason", email = "bjarnihaukur@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Signal Processing", "Machine Learning", "Realtime"]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "onnx",
    "onnxruntime",
    "opencv-python",
    "bqplot",
    "ipywidgets",
    "ahrs",
    "imufusion",
    "bleak",
    "genki_wave",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black"]

[tool.black]
line-length = 120

[project.urls]
Homepage = "https://github.com/genkiinstruments/genki-signals"

